--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
             <div class="col-sm-8">.col-sm-8</div>
           </div>
         <div>
-          <div>
-            <h1>Typography</h1>
-            <h2>Header 2</h2>
-            <h3>Header 3</h3>
+          <div class="text-center">
+            <h1>Header 1 <code>h1</code></h1>
+            <h2>Header 2 <code>h2</code></h2>
+            <h3>Header 3 <code>h3</code></h3>
           </div>
+        
           <p>normal text</p>
           <p class="small">small text</p>
           <p class="lead">This paragraph is a lead.</p>
@@ -40,15 +41,13 @@
           <p class="text-capitalize">Capitalized text.</p>
           <p><code>abbr</code> example: <abbr title="World Health Organization">WHO</abbr> was founded in 1948.</p>
           <p><code>addr</code> element:</p>
-  <address>
-    <strong><a href="mailto:webmaster@example.com">Jon Doe</a></strong><br> 
-    Example.com<br>
-    Box 564, Disneyland<br>
-    USA
-  </address>
+            <address>
+            <strong><a href="mailto:webmaster@example.com">Jon Doe</a></strong><br> 
+            Example.com<br>Box 564, Disneyland<br>USA
+            </address>
           <p>Keyboard element: <kbd>Example</kbd></p>
           <p>Sample output from a computer program, use <code>samp</code></p>
-  <p><samp>This text is output from a computer program....</samp></p>
+            <p><samp>This text is output from a computer program....</samp></p>
 
         </div>
 
