--- a/index.html
+++ b/index.html
@@ -12,13 +12,18 @@
   </head>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-sm-4">.col-sm-4</div>
-            <div class="col-sm-4">.col-sm-4</div>
-            <div class="col-sm-4">.col-sm-4</div>
-          </div>
-        <div class="row">
-            <div class="col-sm-4">.col-sm-4</div>
-            <div class="col-sm-8">.col-sm-8</div>
+            <div class="col-sm-1"><code><code></code>.col-sm-1</code></code></div>
+            <div class="col-sm-1"><code><code>.col-sm-1</code></code></div>
+            <div class="col-sm-1"><code><code>.col-sm-1</code></code></div>
+            <div class="col-sm-1"><code>.col-sm-1</code></div>
+            <div class="col-sm-1"><code>.col-sm-1</code></div>
+            <div class="col-sm-1"><code>.col-sm-1</code></div>
+            <div class="col-sm-1"><code>.col-sm-1</code></div>
+            <div class="col-sm-1"><code>.col-sm-1</code></div>
+            <div class="col-sm-1"><code>.col-sm-1</code></div>
+            <div class="col-sm-1"><code>.col-sm-1</code></div>
+            <div class="col-sm-1"><code>.col-sm-1</code></div>
+            <div class="col-sm-1"><code>.col-sm-1</code></div>
           </div>
         <div>
           <div class="text-center">
@@ -28,8 +33,8 @@
           </div>
         
           <p>normal text</p>
-          <p class="small">small text</p>
-          <p class="lead">This paragraph is a lead.</p>
+          <p class="small"><code>small</code>small text</p>
+          <p class="lead">This paragraph is a <code>lead</code>.</p>
           <p>This is an example of <mark>marked up</mark> text.</mark></p>
           <p class="text-left">Left-aligned text.</p>
           <p class="text-right">Right-aligned text.</p>      
